[package]
name = "rich-clipboard-macos"
authors = ["Wu Yaoping"]
version = "0.1.0"
edition = "2021"
keywords = ["rich-clipboard", "clipboard", "macos"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
objc = "0.2"
objc-foundation = "0.1"
objc_id = "0.1"


[package.metadata.docs.rs]
default-target = "x86_64-apple-darwin"